--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,87 +91,11 @@ beefy-merkle-tree = { git = "https://github.com/paritytech//substrate.git", bran
 # The latest versions of thread_local (1.1.2) had a memory leak. This version doesn't have it.
 thread_local = { git = "https://github.com/KalitaAlexey/thread_local-rs.git", branch = "patch-1.0.1" }
 
-
-#frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-identity = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-im-online = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-multisig = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-offences = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#pallet-utility = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#substrate-frame-rpc-system =  { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }
-#parity-util-mem = { git = "https://github.com/paritytech/parity-common.git" }
-
-#orml-currencies = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }
-#orml-traits = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }
-#orml-tokens = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }
-
-# [patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
-# orml-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", branch = "polkadot-v0.9.16" }
-# orml-traits = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", branch = "polkadot-v0.9.16" }
-# orml-currencies = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", branch = "polkadot-v0.9.16" }
-# orml-utilities = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", branch = "polkadot-v0.9.16" }
+[patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
+orml-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
+orml-traits = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
+orml-currencies = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
+orml-utilities = { git = "https://github.com/open-web3-stack//open-runtime-module-library.git", rev = "c673da3374dfe1d251cd196041470b9eb191c15b" }
 
 #[patch."https://github.com/soramitsu/sora2-frame-pallets.git"]
 #pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", rev = "345f82cccefb0282419d3f37867a126a00ec7d0b" }
