--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -9,18 +9,18 @@ edition = "2021"
 ethereum-gen = { path = "./ethereum-gen" }
 substrate-gen = { path = "./substrate-gen" }
 bridge-types = { path = "../pallets/trustless-eth-bridge/types" }
-ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "5f1f967ec14dc89799135c4aad67fd6647f2c84e" }
+ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
+    "ws",
+    "rustls",
+], rev = "1271308e06bd4c1b6db271488838e011505fcdfa" }
 common = { path = "../common" }
 subxt = { git = "https://github.com/paritytech/subxt", rev = "e0439c91abdec73809fc36e337ec2dc808734e36" }
 tokio = { version = "1.14.0", features = ["full"] }
 url = "2.2.2"
 http = "0.2.6"
 anyhow = "1.0.51"
-jsonrpsee = { version = "0.8.0", features = [
-    "macros",
-    "ws-client",
-    "http-client",
-] }
+jsonrpsee = { version = "0.1" }
+jsonrpsee-core = { version = "0.10.1" }
 clap = { version = "3.1", features = ["derive"] }
 async-trait = "0.1.49"
 rlp = "0.5.1"
