Add make dep to dockerfile

--- a/housekeeping/docker/env-debug/Dockerfile
+++ b/housekeeping/docker/env-debug/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get update && \
     curl \
     git binaryen \
     software-properties-common \
-    llvm clang && \
+    llvm clang make && \
     rm -rf /var/lib/apt/lists/*
 # Install docker
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
