--- a/housekeeping/docker/release/Dockerfile
+++ b/housekeeping/docker/release/Dockerfile
@@ -1,11 +1,11 @@
-FROM debian:bullseye-slim
+FROM debian:buster-slim
 # Install dependencies
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
-        ca-certificates nano curl && \
-	apt-get autoremove -y && \
-	apt-get clean && \
-	find /var/lib/apt/lists/ -type f -not -name lock -delete
+    ca-certificates nano curl && \
+    apt-get autoremove -y && \
+    apt-get clean && \
+    find /var/lib/apt/lists/ -type f -not -name lock -delete
 
 RUN useradd substrate -u 10000
 RUN mkdir /chain && \
