--- a/relayer/substrate-gen/Cargo.toml
+++ b/relayer/substrate-gen/Cargo.toml
@@ -14,6 +14,7 @@ framenode-runtime = { path = "../../runtime", default-features = false, features
     "private-net",
 ] }
 hex = "0.4.3"
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
 
 [dependencies]
 common = { path = "../../common" }
