--- a/utils/wasm-builder/Cargo.toml
+++ b/utils/wasm-builder/Cargo.toml
@@ -8,4 +8,4 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
+substrate-wasm-builder = "4.0"
