--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -14,7 +14,7 @@ ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "37f3df5234b24863
     "rustls",
 ] }
 common = { path = "../common" }
-subxt = { git = "https://github.com/paritytech/subxt", rev = "ec23283d75e4b3b894294e351fd7ffa2b4431201" }
+subxt = { git = "https://github.com/vovac12/subxt", rev = "767a86196a41cb991d06e67319580198abdbcd71" }
 tokio = { version = "1.14.0", features = ["full"] }
 url = "2.2.2"
 http = "0.2.6"
