--- a/pallets/trustless-eth-bridge/types/Cargo.toml
+++ b/pallets/trustless-eth-bridge/types/Cargo.toml
@@ -39,7 +39,7 @@ beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch
 ethabi = { git = "https://github.com/vovac12/ethabi.git", branch = "polkadot-v0.9.22", package = "ethabi", default-features = false, features = [
 	"alloc",
 ] }
-ethash = { git = "https://github.com/vovac12/ethash", branch = "polkadot-v0.9.22", default-features = false }
+ethash = { git = "https://github.com/vovac12/ethash", branch = "polkadot-v0.9.22-no-std", default-features = false }
 serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
