--- a/housekeeping/docker/env-release/Dockerfile
+++ b/housekeeping/docker/env-release/Dockerfile
@@ -37,7 +37,7 @@ RUN curl https://github.com/chevdor/subwasm/releases/download/v0.17.0/subwasm_li
 # Build project
 ADD . /app
 WORKDIR /app
-ENV RUSTC_WRAPPER=sccache
+# ENV RUSTC_WRAPPER=sccache
 ENV CARGO_INCREMENTAL=0
 RUN cargo build --release --features "include-real-files" && \
     cargo test --release && \
