Fix unsafe RPC call and add resetable contracts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -235,7 +235,9 @@ members = [
     "pallets/price-tools",
     "pallets/trustless-eth-bridge/ethereum-light-client",
     "pallets/trustless-eth-bridge/basic-channel",
+    "pallets/trustless-eth-bridge/basic-channel/rpc",
     "pallets/trustless-eth-bridge/incentivized-channel",
+    "pallets/trustless-eth-bridge/incentivized-channel/rpc",
     "pallets/trustless-eth-bridge/dispatch",
     "pallets/trustless-eth-bridge/eth-app",
     "pallets/trustless-eth-bridge/erc20-app",
