--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -63,7 +63,6 @@ trading-pair-runtime-api = { path = "../pallets/trading-pair/runtime-api", defau
 vested-rewards = { path = "../pallets/vested-rewards", default-features = false }
 vested-rewards-runtime-api = { path = "../pallets/vested-rewards/runtime-api", default-features = false}
 xor-fee = { path = "../pallets/xor-fee", default-features = false}
-xor-fee-benchmarking = { path = "../pallets/xor-fee/benchmarking", default-features = false, optional = true }
 xst = { path = "../pallets/xst", default-features = false }
 
 # Substrate dependencies
@@ -245,7 +244,7 @@ runtime-benchmarks = [
     "pswap-distribution/runtime-benchmarks",
     "price-tools/runtime-benchmarks",
     "vested-rewards/runtime-benchmarks",
-    "xor-fee-benchmarking",
+    "xor-fee/runtime-benchmarks",
 ]
 
 reduced-pswap-reward-periods = []
