--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -35,7 +35,7 @@ keccak-hasher = "0.15.3"
 hex = "0.4.3"
 hex-literal = "0.3.4"
 futures = "0.3.17"
-ethash = { git = "https://github.com/vovac12/ethash", branch = "polkadot-v0.9.22-no-std", default-features = false }
+ethash = { git = "https://github.com/vovac12/ethash", branch = "polkadot-v0.9.22-pow-prevalidate", default-features = false }
 log = "0.4.14"
 env_logger = "0.9.0"
 sha3 = { version = "0.10.0" }
@@ -51,6 +51,8 @@ pallet-beefy-mmr = { git = "https://github.com/paritytech/substrate.git", branch
 pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 sp-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
 beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
 codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
   "derive",
   "chain-error",
