--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ fixed-hash = { git = "https://github.com/vmarkushin/parity-common.git", branch =
 # The latest versions of thread_local (1.1.2) had a memory leak. This version doesn't have it.
 thread_local = { git = "https://github.com/KalitaAlexey/thread_local-rs.git", branch = "patch-1.0.1" }
 
+impl-trait-for-tuples = { git = "https://github.com/vovac12/impl-trait-for-tuples.git", branch = "polkadot-v0.9.25" }
 
 #parity-util-mem = { git = "https://github.com/paritytech/parity-common.git" }
 
