--- a/misc/rewards_snapshot/get_lp_tokens/Cargo.toml
+++ b/misc/rewards_snapshot/get_lp_tokens/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-fixnum = { git = "ssh://git@github.com/sora-xor/fixnum", default-features = false, branch = "master", features = [
+fixnum = { git = "https://github.com/sora-xor/fixnum", default-features = false, branch = "master", features = [
     "i128",
 ] }
 reqwest = { version = "0.11.2", features = ["blocking", "json"] }
