--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -9,12 +9,12 @@ edition = "2021"
 ethereum-gen = { path = "./ethereum-gen" }
 substrate-gen = { path = "./substrate-gen" }
 bridge-types = { path = "../pallets/trustless-eth-bridge/types" }
-ethers = { git = "ssh://git@github.com/sora-xor/ethers-rs", branch = "polkadot-v0.9.25", features = [
+ethers = { git = "https://github.com/sora-xor/ethers-rs", branch = "polkadot-v0.9.25", features = [
   "ws",
   "rustls",
 ] }
 common = { path = "../common" }
-subxt = { git = "ssh://git@github.com/sora-xor/subxt", branch = "polkadot-v0.9.25" }
+subxt = { git = "https://github.com/sora-xor/subxt", branch = "polkadot-v0.9.25" }
 tokio = { version = "1.14.0", features = ["full"] }
 url = "2.2.2"
 http = "0.2.6"
@@ -35,7 +35,7 @@ keccak-hasher = "0.15.3"
 hex = "0.4.3"
 hex-literal = "0.3.4"
 futures = "0.3.17"
-ethash = { git = "ssh://git@github.com/sora-xor/ethash", branch = "polkadot-v0.9.25", default-features = false }
+ethash = { git = "https://github.com/sora-xor/ethash", branch = "polkadot-v0.9.25", default-features = false }
 log = "0.4.14"
 env_logger = "0.9.0"
 sha3 = { version = "0.10.0" }
