--- a/relayer/ethereum-gen/Cargo.toml
+++ b/relayer/ethereum-gen/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ethers = { git = "ssh://git@github.com/sora-xor/ethers-rs", branch = "polkadot-v0.9.25" }
+ethers = { git = "https://github.com/sora-xor/ethers-rs", branch = "polkadot-v0.9.25" }
 serde_json = "1.0.72"
 serde = "1.0.131"
 anyhow = "1.0.51"
