[SNE-73]: Implement Dependency checks for company's repositories on GitHub (#699)
* enable dependabot

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* fix config

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change time

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change time

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change interval for check

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

* change time

Signed-off-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

Co-authored-by: Nikita Zaporozhets <zaporozhets@soramitsu.co.jp>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,6 @@ updates:
   - package-ecosystem: "cargo" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
-      day: "thursday"
-      time: "9:00"
+      interval: "daily"
+      time: "06:00"
     open-pull-requests-limit: 0
