--- a/housekeeping/docker/env-debug/Dockerfile
+++ b/housekeeping/docker/env-debug/Dockerfile
@@ -1,20 +1,34 @@
-FROM docker.io/library/debian:bullseye-slim
+FROM debian:bullseye-slim
 
-ENV RUSTUP_HOME=/usr/local/rustup \
-    CARGO_HOME=/usr/local/cargo \
-    PATH=/usr/local/cargo/bin:$PATH \
-    CC=clang \
-    CXX=clang++
+# Set environment variables
+ENV RUSTUP_HOME="/opt/rustup"
+ENV CARGO_HOME="/opt/cargo"
+ENV PATH="$PATH:$CARGO_HOME/bin"
+ENV CARGO_BUILD_DEP_INFO_BASEDIR="."
+ENV CC=clang-13
+ENV CXX=clang++-13
 
 # Install dependencies
-RUN apt-get -y update && \
+RUN apt-get update && \
     apt-get install --no-install-recommends -y \
     ca-certificates apt-transport-https gnupg \
     libssl-dev pkg-config \
-    curl lsof xz-utils unzip protobuf-compiler \
+    curl \
     git binaryen \
-    software-properties-common \
-    llvm clang lld libclang-dev make cmake time rhash && \
+    make cmake libssl-dev zlib1g-dev \
+    file bsdmainutils \
+    software-properties-common && \
+    apt-get autoremove -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN curl -s https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
+    echo "deb http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-13 main" >> /etc/apt/sources.list.d/llvm-toochain-bullseye-13.list && \
+    echo "deb-src http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-13 main" >> /etc/apt/sources.list.d/llvm-toochain-bullseye-13.list && \
+    apt-get -y update && \
+    apt-get install -y --no-install-recommends \
+    clang-13 lldb-13 lld-13 libclang-13-dev llvm-13 && \
+    update-alternatives --install /usr/bin/cc cc /usr/bin/clang-13 100 && \
     apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
@@ -32,27 +46,21 @@ RUN add-apt-repository \
 
 # Install rust
 ENV RUST_NIGHTLY_VERSION=nightly-2022-05-12
-ENV GRCOV_VERSION=0.8.11
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-toolchain stable && \
-    cargo install grcov --version ${GRCOV_VERSION} && \
-    rustup component add llvm-tools-preview && \
     rustup toolchain install ${RUST_NIGHTLY_VERSION} && \
-    ln -s /usr/local/rustup/toolchains/${RUST_NIGHTLY_VERSION}-x86_64-unknown-linux-gnu /usr/local/rustup/toolchains/nightly-x86_64-unknown-linux-gnu && \
     rustup target add wasm32-unknown-unknown && \
-    rustup target add wasm32-unknown-unknown --toolchain nightly && \
+    rustup target add wasm32-unknown-unknown --toolchain ${RUST_NIGHTLY_VERSION} && \
     rm -rf "${CARGO_HOME}/registry" "${CARGO_HOME}/git"
 
-RUN curl https://github.com/chevdor/subwasm/releases/download/v0.17.0/subwasm_linux_amd64_v0.17.0.deb -sSL -o subw.deb && \
+RUN curl https://github.com/chevdor/subwasm/releases/download/v0.14.1/subwasm_linux_amd64_v0.14.1.deb -sSL -o subw.deb && \
     dpkg -i subw.deb && rm subw.deb
 
-# Build project
-ADD . /app
-WORKDIR /app
-ENV CARGO_INCREMENTAL=0
-RUN cargo check && \
-    cargo test && \
-    cargo check --features private-net && \
-    cargo test --features private-net && \
-    cargo check --features runtime-benchmarks && \
-    rm -rf $(find target -name deps -type d) $(find target -name build -type d) $(find target -name "*.d" -type f) "${CARGO_HOME}/registry" "${CARGO_HOME}/git"
-WORKDIR /
+RUN cargo install grcov && \
+    rustup component add llvm-tools-preview && \
+    rm -rf "${CARGO_HOME}/registry" "${CARGO_HOME}/git"
+
+RUN git clone https://github.com/rui314/mold.git && \
+    git -C "./mold" checkout v1.3.1 && \
+    make --directory="./mold" -j && \
+    make --directory="./mold" install && \
+    rm -rf "./mold"
