--- a/housekeeping/docker/env-debug/Dockerfile
+++ b/housekeeping/docker/env-debug/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 
 # Set environment variables
 ENV RUSTUP_HOME="/opt/rustup"
@@ -16,33 +16,33 @@ RUN apt-get update && \
     curl \
     git binaryen \
     make cmake libssl-dev zlib1g-dev \
-    file bsdmainutils \
+    file bsdmainutils mold clang lldb lld libclang-dev llvm \
     software-properties-common && \
     apt-get autoremove -y && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-RUN curl -s https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
-    echo "deb http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-13 main" >> /etc/apt/sources.list.d/llvm-toochain-bullseye-13.list && \
-    echo "deb-src http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-13 main" >> /etc/apt/sources.list.d/llvm-toochain-bullseye-13.list && \
-    apt-get -y update && \
-    apt-get install -y --no-install-recommends \
-    clang-13 lldb-13 lld-13 libclang-13-dev llvm-13 && \
-    update-alternatives --install /usr/bin/cc cc /usr/bin/clang-13 100 && \
-    apt-get autoremove -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# RUN curl -s https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
+#     echo "deb http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-13 main" >> /etc/apt/sources.list.d/llvm-toochain-bullseye-13.list && \
+#     echo "deb-src http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-13 main" >> /etc/apt/sources.list.d/llvm-toochain-bullseye-13.list && \
+#     apt-get -y update && \
+#     apt-get install -y --no-install-recommends \
+#     clang-13 lldb-13 lld-13 libclang-13-dev llvm-13 && \
+#     update-alternatives --install /usr/bin/cc cc /usr/bin/clang-13 100 && \
+#     apt-get autoremove -y && \
+#     apt-get clean && \
+#     rm -rf /var/lib/apt/lists/*
 
-# Install docker
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-RUN add-apt-repository \
-    "deb https://download.docker.com/linux/debian $(lsb_release -cs) stable" && \
-    apt-get update && \
-    apt-get install --no-install-recommends -y \
-    docker-ce docker-ce-cli containerd.io && \
-    apt-get autoremove -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# # Install docker
+# RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
+# RUN add-apt-repository \
+#     "deb https://download.docker.com/linux/debian $(lsb_release -cs) stable" && \
+#     apt-get update && \
+#     apt-get install --no-install-recommends -y \
+#     docker-ce docker-ce-cli containerd.io && \
+#     apt-get autoremove -y && \
+#     apt-get clean && \
+#     rm -rf /var/lib/apt/lists/*
 
 # Install rust
 ENV RUST_NIGHTLY_VERSION=nightly-2022-05-12
@@ -52,15 +52,15 @@ RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-tool
     rustup target add wasm32-unknown-unknown --toolchain ${RUST_NIGHTLY_VERSION} && \
     rm -rf "${CARGO_HOME}/registry" "${CARGO_HOME}/git"
 
-RUN curl https://github.com/chevdor/subwasm/releases/download/v0.14.1/subwasm_linux_amd64_v0.14.1.deb -sSL -o subw.deb && \
+RUN curl https://github.com/chevdor/subwasm/releases/download/v0.17.0/subwasm_linux_amd64_v0.17.0.deb -sSL -o subw.deb && \
     dpkg -i subw.deb && rm subw.deb
 
 RUN cargo install grcov && \
     rustup component add llvm-tools-preview && \
     rm -rf "${CARGO_HOME}/registry" "${CARGO_HOME}/git"
 
-RUN git clone https://github.com/rui314/mold.git && \
-    git -C "./mold" checkout v1.3.1 && \
-    make --directory="./mold" -j && \
-    make --directory="./mold" install && \
-    rm -rf "./mold"
+# RUN git clone https://github.com/rui314/mold.git && \
+#     git -C "./mold" checkout v1.3.1 && \
+#     make --directory="./mold" -j && \
+#     make --directory="./mold" install && \
+#     rm -rf "./mold"
