--- a/pallets/ceres-launchpad/Cargo.toml
+++ b/pallets/ceres-launchpad/Cargo.toml
@@ -71,10 +71,14 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
+    "pallet-timestamp/std",
+    "ceres-liquidity-locker/std",
+    "ceres-token-locker/std",
 ]
 
 runtime-benchmarks = [
     "frame-benchmarking",
     "frame-system/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
+    "pallet-timestamp/runtime-benchmarks",
 ]
