--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -146,10 +146,7 @@ bridge-types = { path = "../pallets/trustless-eth-bridge/types", default-feature
 
 [dev-dependencies]
 env_logger = "0.9.0"
-framenode-chain-spec = { path = "../node/chain_spec", features = [
-    "test",
-    "private-net",
-] }
+framenode-chain-spec = { path = "../node/chain_spec", features = ["test"] }
 
 [features]
 default = ["std", "build-wasm-binary"]
@@ -255,7 +252,12 @@ std = [
     "xst/std",
 ]
 
-private-net = ["faucet", "farming/private-net", "vested-rewards/private-net"]
+private-net = [
+    "faucet",
+    "farming/private-net",
+    "vested-rewards/private-net",
+    "framenode-chain-spec/private-net",
+]
 
 runtime-benchmarks = [
     "assets/runtime-benchmarks",
