--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
     "rust-analyzer.diagnostics.disabled": [
         "macro-error"
     ],
-    "rust-analyzer.diagnostics.enableExperimental": false
+    "rust-analyzer.diagnostics.experimental.enable": false
 }
